Put timer and forms in a div called 'work-area' and gave it a fixed height of 300px. Purpose: So the page content doesn't jump around every time that area changes. Also added a slideDown animation whenever a news feed item gets created. Purpose: Make it more visually apparent that a news feed item is getting added when they hit 'Log results'. Also fixed bug with the counter being displayed on page refresh on the forms that didn't have a textfield.

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -101,3 +101,11 @@ body {
   text-align: center;
   min-height: 25px;
 }
+
+.work-area{
+  height: 300px;
+}
+
+/*.highlight{
+  background-color: #c0deff;
+}*/
